cosmetic changes and update as per review comments
Signed-off-by: saakhan <saakhan@redhat.com>